<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/custom_toolbar_main" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="14dp"
                    android:gravity="center"
                    android:text="@string/text_welcome_main_act"
                    android:textColor="@color/color_for_welcome_text"
                    android:textSize="45sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/din_font"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputEmailEditTextMainAct"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/custom_edit_text_main"
                    android:hint="@string/text_hint_email_edit_text"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:backgroundTint="#f5f5f5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20dp"/>



                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputPasswordEditTextMainAct"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/custom_edit_text_main"
                    android:backgroundTint="#f5f5f5"
                    android:hint="@string/text_hint_password_edit_text"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logInBtnMainAct"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="80dp"
                    android:background="@drawable/custom_login_button_main"
                    android:text="@string/button_login_text"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/registrationBtnMainAct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/registration_button_main"
                    android:textColor="@color/red_for_registration_button"
                    android:textSize="22sp"/>


            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>