<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="screen.registration.ui.RegistrationActivity">

    <include
        android:id="@+id/toolbarRegistrationAct"
        layout="@layout/custom_toolbar_main" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="24dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="14dp"
                    android:gravity="center"
                    android:text="@string/registration_button_main"
                    android:textColor="@color/color_for_welcome_text"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/din_font"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputNameEditTextRegistrationAct"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/custom_edit_text_main"
                    android:backgroundTint="#f5f5f5"
                    android:hint="@string/text_hint_user_name"
                    android:inputType="textCapSentences"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black"
                    android:textSize="20dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputSernameEditTextRegistrationAct"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/custom_edit_text_main"
                    android:backgroundTint="#f5f5f5"
                    android:hint="@string/text_hint_user_second_name"
                    android:inputType="textCapSentences"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textColor="@color/black" android:textSize="20dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputUserNumberRegistrationAct"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/custom_edit_text_main"
                    android:backgroundTint="#f5f5f5"
                    android:hint="@string/text_hint_user_number"
                    android:inputType="phone"
                    android:paddingLeft="12dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/black" android:textSize="20dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registrationBtnRegAct"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/custom_login_button_main"
                    android:text="@string/text_for_btn_reg"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>